[project]
name = "ai-radar"
version = "0.1.0"
description = "Daily AI radar from RSS feeds."
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
ai-radar = "ai_radar.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
